# learning-ai

./: .env.sh  .gitmodules  README.md
.github/: FUNDING.yml
.github/workflows/: debug-tag-name.yml  main.yml  release.yml
agents/: README.md
agents/llama-cpp-agent/: .gitignore  Makefile  README.md
agents/llama-cpp-agent/agent/: Cargo.toml
agents/llama-cpp-agent/agent/src/: agent.rs  main.rs  tool.rs
attention/src/: attention.py
audio/silero-vad/: .gitignore  silero_vad_conv_pytorch.pth
embeddings/python/: .gitignore  requirements.txt
fundamentals/: README.md
fundamentals/amx/: Makefile  README.md
fundamentals/datastructures/: Makefile  README.md
fundamentals/ggml/: .gitignore  Makefile  README.md  add.dot  cuda-env.sh  env.sh  get-rows.dot  mul.dot
fundamentals/hip/: Makefile
fundamentals/huggingface/: create_save_tokenizer.py  create_save_weights.py  test.py  test_tokenizer.py
fundamentals/image-processing/: Makefile
fundamentals/kleidiai/: .gitignore  Makefile
fundamentals/llama.cpp/: .gitignore  Makefile  README.md
fundamentals/macos/: Makefile
fundamentals/neon/: Makefile
fundamentals/openvino/: .gitignore  Makefile  README.md  setenv.sh
fundamentals/openvino-cpp/: .gitignore  Makefile
fundamentals/python/: .gitignore  README.md  autograd  autograd_mlp  autograd_nn  requirements.txt
fundamentals/rocm/: Makefile  README.md  set-env.sh
fundamentals/rust/: README.md
fundamentals/rust/llm-chains-chat-demo/: Cargo.toml  Makefile  README.md
fundamentals/rust/llm-chains-chat-demo/data/: vex-stripped.json
fundamentals/rust/llm-chains-chat-demo/src/: main-llama.rs  main-openai.rs  main.rs
fundamentals/rust/llm-chains-llama-example/: Cargo.toml  README.md
fundamentals/rust/llm-chains-llama-example/src/: main.rs
fundamentals/rust/llm-example/: Cargo.toml  README.md
fundamentals/rust/llm-example/src/: main.rs
fundamentals/rust/perplexity-ai-example/: .gitignore  Cargo.toml  README.md
fundamentals/rust/perplexity-ai-example/src/: main.rs
fundamentals/rust/zero-to-hero/: .gitignore  Cargo.toml  README.md  requirements.txt
fundamentals/rust/zero-to-hero/micrograd/: Cargo.toml
fundamentals/rust/zero-to-hero/micrograd/src/: data.rs  layer.rs  lib.rs  mlp.rs
fundamentals/rust/zero-to-hero/part1/: Cargo.toml
fundamentals/rust/zero-to-hero/part1/src/: main.rs
fundamentals/rust/zero-to-hero/part2/: Cargo.toml
fundamentals/rust/zero-to-hero/part2/src/: data.rs  main.rs
fundamentals/rust/zero-to-hero/plots/: part1_graph.dot  part1_single_neuron.dot  part1_single_neuron1.dot  part1_single_neuron10.dot  part1_single_neuron2.dot  part1_single_neuron3.dot  part1_single_neuron4.dot  part1_single_neuron5.dot  part1_single_neuron6.dot  part1_single_neuron7.dot  part1_single_neuron8.dot  part1_single_neuron9.dot  part1_single_neuron_3.dot
fundamentals/rust/zero-to-hero/src/: layer.rs  lib.rs  mlp.rs  neuron.rs  value.rs
fundamentals/simd/: Makefile  README.md
fundamentals/simd-assembly/: Makefile  README.md
fundamentals/sve/: Makefile  README.md
fundamentals/sycl/: Makefile  README.md  cuda-env.sh
fundamentals/vllm/: README.md
fundamentals/vnni/: .gitignore  Makefile  README.md
gpu/: README.md
gpu/cuda/: .gitignore  Makefile  README.md  cuda-env.sh  cuda_exploration.ipynb
gpu/kompute/: CMakeLists.txt  README.md
gpu/metal/: .gitignore  Makefile  Package.swift
gpu/mlx/: .gitignore
gpu/opencl/: Makefile  README.md  opencl_exploration.ipynb
gpu/rocm/: Makefile  README.md  setenv.sh
gpu/vulkan/: .gitignore  Makefile  README.md  setenv.sh
gpu/webgpu/: README.md
gpu/xrt/: .gitignore  Makefile  README.md
hugging-face/python/: requirements.txt
langchain/: .gitignore  README.md  requirements.txt
langchain/src/: agent-custom-tool.py  agent-serper.py  agent-shell.py  chain.py  chat_history.py  cve-2020-1968  cve-2020-1971  github-search.py  llama-local.py  project-health.py  trust-chat-local.py  trust-chat.py  vex-search.py  vex_cve.py
notes/: activation-functions.md  alibi.md  amx.md  android.md  ane.md  apache-arrow.md  attention-sink.md  attention.md  autoencoder.md  awq.md  baby-llama-issue.md  background.md  bitnet.md  blas.md  blip2.md  bloom.md  bpe.md  cann.md  chat-templates.md  chatml.md  clip-search.md  clip.md  cnn.md  colab.md  continous-batching.md  control-vectors.md  copilot.md  coreml.md  count-based.md  cuda.md  diffusion.md  dpo.md  dsa.md  egpu.md  embedding-vector.md  embeddings.md  exp.md  fine-tuning.md  flash-attention.md  flow-matching.md  (+144 more)
notes/agents/: claude-code-router.md  claude-code.md  code-agents.md  goose.md  opencode.md
notes/architectures/: README.md  cnn.md  linear-attention.md  mamba.md  mamba2.md  matformer.md  rnn.md  rwkv.md  state-space-models.md  transformers.md
notes/attention/: attention-sink.md  attention.md  dsa.md  gqa.md  mha.md  mqa.md
notes/audio/: conformer.md  dtw.md  lrc.md  sdl2.md  srt.md  vtt.md  whisper-stream.md
notes/ggml/: argsort.md  arm-i8mm-issue.md  backend-build.md  cpu-backend.md  cuda.md  ggml-backend-sched.md  ggml-cont.md  ggml-gallocr-reserve.md  ggml-native.md  ggml-optimizers.md  ggml-quantization.md  ggml-quants.md  ggml-simd.md  ggml-split-graph.md  ggml-ssm-scan.md  meta-backend.md  openvino-backend.md  quantization.md  repack.md  temp.md  timestep-embeddings.md  version.md  webgpu.md
notes/llama.cpp/: cmake-install-dir-issue.md  convert-dequantize.md  convert-mamba-issue.md  convert.md  cuda-fp16-release-build-issue.md  cuda-mul-mat.md  cuda.md  debugging.md  devstral2-conversion.md  embedding-gemma-dense.md  embeddings-presets.md  flash-attn-misalignment-issue.md  gemma-bos-issue.md  ggml-threadpool-macos-issue.md  gpt-oss.md  gpu-sampling.md  graph-inputs.md  https.md  kleidiai-install-issue.md  kv-cache.md  llama-3-2-vision.md  llama-batch.md  llama-perplexity.md  llama-server.md  llama-vocab-notes.md  macosx.md  output_ids.md  (+15 more)
tensor-flow/: README.md  requirements.txt
vector-databases/qdrant/rust-qdrant-example/: Cargo.toml  Makefile  README.md
vector-databases/qdrant/rust-qdrant-example/src/: main.rs
(+491 files in other folders)
