[package]
name = "llama-cpp-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = { git = "https://github.com/utilityai/llama-cpp-rs.git" }

anyhow = "1.0"
wasmtime = { version = "28.0.0", features = ["component-model", "async"] }
wasmtime-wasi = { version = "28.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5.23", features = ["derive"] }
hf-hub = { version = "0.3.2" }
encoding_rs = "0.8.35"
echo-tool = { path = "../tools/echo" }

#[lib]
#name = "llama_agent"
#path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"
