[package]
name = "llm-chains-chat-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
#llm-chain = "0.12.3"
llm-chain = { git = "https://github.com/sobelio/llm-chain.git", branch = "main" }

#llm-chain-llama = "0.12.3"
llm-chain-llama = { git = "https://github.com/sobelio/llm-chain.git", branch = "main" }

#llm-chain-openai = "0.12.3"
llm-chain-openai = { git = "https://github.com/sobelio/llm-chain.git", branch = "main" }

llm-chain-qdrant = { git = "https://github.com/sobelio/llm-chain.git", branch = "main" }
qdrant-client = "1.6.0"

serde = "1.0.189"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
text-splitter = "0.4.4"
thiserror = "1.0.49"
tokio = { version = "1.33.0", features = ["full"] }

[[bin]]
name = "openai"
path = "src/main-openai.rs"

[[bin]]
name = "llama"
path = "src/main-llama.rs"
