[package]
name = "llm-chains-llama-example"
version = "0.1.0"
edition = "2021"

[dependencies]
#llm-chain = "0.12.3"
#llm-chain = { path = "/home/danielbevenius/work/ai/llm-chain/crates/llm-chain" }
llm-chain = { git = "https://github.com/sobelio/llm-chain.git", branch = "main" }
#llm-chain-llama = "0.12.3"
#llm-chain-llama = { path = "/home/danielbevenius/work/ai/llm-chain/crates/llm-chain-llama" }
llm-chain-llama = { git = "https://github.com/sobelio/llm-chain.git", branch = "main" }
tokio = { version = "1.33.0", features = ["full"] }
