[package]
name = "llm-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
rand = "0.8.5"
