[package]
name = "zero-to-hero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
plotpy = "0.4.2"
russell_lab = "0.5.0"

[[bin]]
name = "part1"
path = "src/bin/part1.rs"

[[bin]]
name = "part2"
path = "src/bin/part2.rs"

[lib]
name = "zero_to_hero"
path = "src/lib.rs"
