[package]
name = "rust-qdrant-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
qdrant-client = "1.4.0"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tonic = "0.9.2"
